// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonDetails component should render properly - expanded 1`] = `
<DocumentFragment>
  <div
    class="govuk-!-margin-bottom-7"
  >
    <div
      class="lbh-table-header"
    >
      <h2
        class="govuk-fieldset__legend--m govuk-custom-text-color"
      >
        i am the first i am the last
      </h2>
      <div
        class="govuk-link"
        role="button"
      >
        Expand view
      </div>
    </div>
    <hr
      class="govuk-divider"
    />
  </div>
</DocumentFragment>
`;

exports[`PersonDetails component should render properly - expanded 2`] = `
<DocumentFragment>
  <div
    class="govuk-!-margin-bottom-7"
  >
    <div
      class="lbh-table-header"
    >
      <h2
        class="govuk-fieldset__legend--m govuk-custom-text-color"
      >
        i am the first i am the last
      </h2>
      <div
        class="govuk-link"
        role="button"
      >
        Collapse view
      </div>
    </div>
    <hr
      class="govuk-divider"
    />
    <dl
      class="govuk-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Other Names
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          <ul
            class="govuk-list"
          >
            <li>
              asd qwe
            </li>
          </ul>
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Person ID
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          #mosaic
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Gender
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          X
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Date of birth
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          23/02/1978
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Date Of Death
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          23/02/1998
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Ethnicity
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          White
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Sexual orientation
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          straight
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          NHS number
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          nhs_123
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Address
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          <p>
            new adress
          </p>
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Phone Number
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          <ul
            class="govuk-list"
          >
            <li>
              02123 - Home
            </li>
          </ul>
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Email 
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          test@test.com
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Preferred Method Of Contact
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          email
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Person type
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          ASC
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PersonDetails component should render properly 1`] = `
<DocumentFragment>
  <div
    class="govuk-!-margin-bottom-7"
  >
    <div
      class="lbh-table-header"
    >
      <h2
        class="govuk-fieldset__legend--m govuk-custom-text-color"
      >
        PERSON DETAILS
      </h2>
    </div>
    <hr
      class="govuk-divider"
    />
    <dl
      class="govuk-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Other Names
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          <ul
            class="govuk-list"
          >
            <li>
              asd qwe
            </li>
          </ul>
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Person ID
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          #mosaic
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Gender
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          X
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Date of birth
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          23/02/1978
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Date Of Death
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          23/02/1998
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Ethnicity
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          White
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Sexual orientation
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          straight
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          NHS number
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          nhs_123
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Address
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          <p>
            new adress
          </p>
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Phone Number
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          <ul
            class="govuk-list"
          >
            <li>
              02123 - Home
            </li>
          </ul>
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Email 
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          test@test.com
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Preferred Method Of Contact
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          email
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Person type
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          ASC
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;
